--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -2,7 +2,7 @@
   "meta": {
     "username": "SergioEric",
     "repositoryName": "https://github.com/SergioEric/blog.git",
-    "branch": "master"
+    "branch": "gh-pages"
   },
   "theme": {
     "name": "Casper"
