--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "username": "SergioEric",
-    "repositoryName": "https://github.com/SergioEric/blog.git",
+    "repositoryName": "blog",
     "branch": "gh-pages"
   },
   "theme": {
